# crewai-data-science-team

./: .gitignore  README.md  pyproject.toml
output/: 01_strategy_alignment.md  02_product_roadmap.md  03_data_architecture.md  04_data_engineering_log.md  05_data_analysis_report.md  06_business_specs.md  07_model_performance.md  08_deployment_manifest.md  09_mlops_config.md  10_ethical_review.md  11_final_project_summary.md  1_strategy_alignment.md  2_product_roadmap.md  3_data_architecture.md  4_data_engineering_log.md  5_data_analysis_report.md  6_business_specs.md  7_model_performance.md  8_deployment_manifest.md  9_mlops_config.md  app.py  requirements.txt
src/data_science_team/: crew.py  main.py
src/data_science_team/config/: agents.yaml  tasks.yaml
src/data_science_team/tools/: custom_tool.py
