[project]
name = "data_science_team"
version = "0.1.0"
description = "data_science_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "gradio>=6.5.1",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
data_science_team = "data_science_team.main:run"
run_crew = "data_science_team.main:run"
train = "data_science_team.main:train"
replay = "data_science_team.main:replay"
test = "data_science_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
